# talent-graph-system

./: .gitignore  CLAUDE.md  README.md  提交材料清单.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  clients.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: chat.py  discovery.py  evolution.py  graph.py  jobs.py  match.py
backend/app/services/: cleaning.py  discovery.py  evolution.py  extraction.py  graph_service.py  hallucination.py  ingest.py  matching.py  resume.py  taxonomy.py
backend/data/: clean_skill_names.py  eval_jd_result.json  eval_match_result.json  evaluate.py  export_deliverables.py  generate_dataset.py  generate_resumes.py  ground_truth.json  md_to_docx.py  rediscover_new_jobs.py  run_pipeline.py  seed_evolution.py  seed_jds.json  seed_relations.py  smoke_test.py  test_resumes.json
backend/tests/: conftest.py  test_api.py  test_cleaning.py  test_discovery.py  test_evolution.py  test_extraction.py  test_hallucination.py  test_matching.py  test_resume.py  test_taxonomy.py
deploy/: Dockerfile  docker-compose.yml  talent-graph.service
docs/: 作品设计与实现方案.docx  技术答辩文档.docx  智岗图谱_作品介绍.pptx  测试方案与报告.docx  演示视频脚本.docx  演示视频脚本.md  部署说明.docx
docs/_source/: 作品设计与实现方案.md  技术答辩文档.md  测试方案与报告.md  演示视频脚本.md  部署说明.md
docs/ppt_build/: build.js  package-lock.json  package.json  智岗图谱_作品介绍.pptx
docs/测试数据/: eval_jd_result.json  eval_resume_result.json  ground_truth.json  (+6 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+13 files in other folders)
