[project]
name = "talent-graph-backend"
version = "1.0.0"
description = "多源异构数据驱动岗位和能力图谱构建与动态演化分析系统 - 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pymysql>=1.1.1",
    "cryptography>=43.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "openai>=1.54.0",
    "pdfplumber>=0.11.4",
    "python-docx>=1.1.2",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "tests/*"]
